--- a/src/app/src/main/res/layout/fragment_profile_view.xml
+++ b/src/app/src/main/res/layout/fragment_profile_view.xml
@@ -8,126 +8,132 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
         android:id="@+id/top_container"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/colorAccentDark">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/editFAB"
+        <TextView
+            android:id="@+id/userNameFragmentProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            app:backgroundTint="@color/colorPrimary"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            app:srcCompat="@android:drawable/ic_menu_edit" />
+            android:layout_marginStart="27dp"
+            android:layout_marginTop="16dp"
+            android:layout_toEndOf="@+id/profilePictureEditFragment"
+            android:fontFamily="sans-serif"
+            android:text="👤Username"
+            android:textColor="@color/colorWhite"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profilePictureEditFragment" />
+
+
+
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/profilePictureEditFragment"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+
+
+            android:src="@mipmap/ic_launcher_emoji"
+            tools:ignore="ContentDescription" />
+
+
+    </RelativeLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintOneButton"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:layout_constraintTop_toBottomOf="@id/top_container"
+        >
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/UnfollowButton"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_margin="10dp"
+            android:layout_height="45dp"
+            android:gravity="center"
+            android:text="Unfollow"
+            android:textColor="@color/colorPrimary"
+            android:visibility="invisible"
+            app:strokeColor="@color/colorPrimary" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/editFAB"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_margin="10dp"
+            android:layout_height="45dp"
+            android:gravity="center"
+            android:text="Edit Profile"
+            android:textColor="@color/colorPrimary"
+            android:visibility="invisible"
+            app:strokeColor="@color/colorPrimary"
+            tools:layout_editor_absoluteX="128dp"
+            tools:layout_editor_absoluteY="5dp" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/FollowButton"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:visibility="gone"
-            android:text="Follow"
+            android:layout_width="match_parent"
+            android:layout_margin="10dp"
+            android:layout_height="45dp"
             android:backgroundTint="@color/fui_bgTwitter"
+            android:text="Follow"
             android:textColor="@color/colorWhite"
-            app:layout_constraintVertical_bias="0.0" />
+            android:visibility="invisible" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/UnfollowButton"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_alignParentTop="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:gravity="center"
-            android:text="Unfollow"
-            android:textColor="@color/colorWhite"
-            app:strokeColor="@color/colorWhite" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <LinearLayout
-            android:id="@+id/pictureContainer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/fui_transparent"
-            android:layout_centerInParent="true"
-            android:orientation="vertical"
-            android:paddingBottom="40dp">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/profilePictureEditFragment"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-
-                android:src="@mipmap/ic_launcher_emoji"
-                tools:ignore="ContentDescription" />
-
-            <TextView
-                android:id="@+id/userNameFragmentProfile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:fontFamily="sans-serif"
-                android:text="👤Username"
-                android:textColor="@color/colorWhite"
-                android:textSize="24sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/profilePictureEditFragment" />
-
-
-        </LinearLayout>
-
-
-    </RelativeLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        app:layout_constraintTop_toBottomOf="@id/top_container">
+        app:layout_constraintTop_toBottomOf="@id/constraintOneButton">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/FollowingButton"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Following"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:textColor="@color/colorPrimary"
             app:layout_constraintEnd_toStartOf="@+id/FollowersButton"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="@color/colorPrimary"/>
+            app:strokeColor="@color/colorPrimary" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/FollowersButton"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Followers"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:textColor="@color/colorPrimary"
             app:layout_constraintEnd_toStartOf="@+id/MoodHistoryButton"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/FollowingButton"
             app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="@color/colorPrimary"/>
+            app:strokeColor="@color/colorPrimary" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/MoodHistoryButton"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mood History"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:textColor="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/FollowersButton"
             app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="@color/colorPrimary"/>
+            app:strokeColor="@color/colorPrimary" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
