--- a/src/app/src/main/res/values/colors.xml
+++ b/src/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimary">#2D3142</color>
     <color name="colorAccentDark">#ADACB5</color>
     <color name="colorAccentLight">#EAE8FF</color>
+    <color name="colorAccentBg">#f9f9f9</color>
     <color name="colorWhite">#ffffff</color>
 
     <color name="colorPrimaryDark">#0C100F</color>
