--- a/src/app/src/main/res/layout/fragment_profile_view.xml
+++ b/src/app/src/main/res/layout/fragment_profile_view.xml
@@ -36,7 +36,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
-            android:layout_marginTop="8dp"
+            android:layout_margin="8dp"
 
 
             android:src="@mipmap/ic_launcher_emoji"
